# Agrocylo-Global

./: Cargo.toml  README.md
.github/workflows/: ci.yml  server-e2e.yml
agro-production/: README.md
agro-production/client/: CONTRIBUTING.md  package-lock.json  package.json
agro-production/contract/: README.md
agro-production/contract/production_escrow/: Cargo.toml  SETTLEMENT_POLICY.md  TTL_POLICY.md
agro-production/contract/production_escrow/src/: lib.rs  test.rs
agro-production/contracts/: EVENT_SPEC.md  FEE_POLICY.md
agro-production/server/: .gitignore  README.md  package-lock.json  package.json  vitest.e2e.config.ts
agro-production/server/prisma/: schema.prisma
agro-production/server/src/: app.module.ts  app.ts  main.ts
client/: ACCESSIBILITY.md  next.config.ts  package-lock.json  package.json  setup.ts  vitest.config.ts
client/__mocks__/: next-link.tsx  next-navigation.ts
client/e2e/: accessibility.spec.ts  mobile-layout.spec.ts  wallet-checkout.spec.ts
client/playwright-report/: index.html
client/src/: a11y.test.tsx  middleware.ts
client/src/app/: globals.css  layout.tsx  manifest.ts
client/src/components/: AdminGuard.test.tsx  AdminGuard.tsx  AnalyticsInit.tsx  BarterOfferForm.tsx  BuyerIntentResponse.tsx  BuyerIntents.tsx  CartDrawer.test.tsx  ChatWindow.tsx  DemandSignalPanel.tsx  DemandVolume.tsx  NotificationCenter.tsx  NotificationPreferences.test.tsx  NotificationPreferences.tsx  OrderConfirmationFlow.tsx  PriceAlertManager.tsx  ProductCard.tsx  (+7 more)
server/: .env.example
server/prisma/: schema.prisma
server/src/: index.ts
(+202 files in other folders)
