[package]
name = "production_escrow"
version = "0.1.0"
edition = "2021"
description = "Canonical Soroban production escrow contract for Agrocylo"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
